terraform/modules/infrastructure/assets/network/routes.tf
resource "aws_route_table" "public-a" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    name        = "public-a"
    environment = "${var.environment}"
  }
}

resource "aws_route_table_association" "public-a" {
  subnet_id      = aws_subnet.attacker_subnet.id
  route_table_id = aws_route_table.public-a.id
}


resource "aws_route_table" "public-b" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    name        = "public-b"
    environment = "${var.environment}"
  }
}

resource "aws_route_table_association" "public-b" {
  subnet_id      = aws_subnet.target_subnet.id
  route_table_id = aws_route_table.public-b.id
}

resource "aws_route_table" "private-a" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-a.id
  }

  tags = {
    name        = "private-a"
    environment = "${var.environment}"
  }
}

resource "aws_route_table_association" "private-a" {
  subnet_id      = aws_subnet.private-a.id
  route_table_id = aws_route_table.private-a.id
}

resource "aws_route_table" "private-b" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-b.id
  }

  tags = {
    name        = "private-b"
    environment = "${var.environment}"
  }
}

resource "aws_route_table_association" "private-b" {
  subnet_id      = aws_subnet.private-b.id
  route_table_id = aws_route_table.private-b.id
}

// public-b
//resource "aws_route" "internet_access" {
//  route_table_id         = aws_vpc.main.main_route_table_id
//  destination_cidr_block = "0.0.0.0/0"
//  gateway_id             = "aws_internet_gateway.gw.id"
//}
